--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -207,6 +207,19 @@ if(UNIX)
   set_property(TARGET my_cuda PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
 endif()
 
+
+message("CUDA_TOOLKIT_ROOT_DIR : ${CUDA_TOOLKIT_ROOT_DIR}")
+message("CUDA_INCLUDE_DIRS : ${CUDA_INCLUDE_DIRS}")
+message("CUDA_TOOLKIT_INCLUDE : ${CUDA_TOOLKIT_INCLUDE}")
+message("CUDA_CUDART_LIBRARY : ${CUDA_CUDART_LIBRARY}")
+message("CUDA_cublas_LIBRARY : ${CUDA_cublas_LIBRARY}")
+message("CUDA_LIBRARIES : ${CUDA_LIBRARIES}")
+message("CUDA_cudart_static_LIBRARY : ${CUDA_cudart_static_LIBRARY}")
+message("CUDA_cudadevrt_LIBRARY : ${CUDA_cudadevrt_LIBRARY}")
+message("CUDA_NVCC_EXECUTABLE : ${CUDA_NVCC_EXECUTABLE}")
+message("CUDA_SDK_ROOT_DIR : ${CUDA_SDK_ROOT_DIR}")
+message("CUDA_SDK_SEARCH_PATH : ${CUDA_SDK_SEARCH_PATH}")
+
 add_executable(vec1d vec1d.c)
 target_link_libraries(vec1d PRIVATE ${CUDA_LIBRARIES} my_cuda m)
 set_property(TARGET vec1d PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
