--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -208,17 +208,34 @@ if(UNIX)
 endif()
 
 
-message("CUDA_TOOLKIT_ROOT_DIR : ${CUDA_TOOLKIT_ROOT_DIR}")
-message("CUDA_INCLUDE_DIRS : ${CUDA_INCLUDE_DIRS}")
-message("CUDA_TOOLKIT_INCLUDE : ${CUDA_TOOLKIT_INCLUDE}")
-message("CUDA_CUDART_LIBRARY : ${CUDA_CUDART_LIBRARY}")
-message("CUDA_cublas_LIBRARY : ${CUDA_cublas_LIBRARY}")
-message("CUDA_LIBRARIES : ${CUDA_LIBRARIES}")
-message("CUDA_cudart_static_LIBRARY : ${CUDA_cudart_static_LIBRARY}")
-message("CUDA_cudadevrt_LIBRARY : ${CUDA_cudadevrt_LIBRARY}")
-message("CUDA_NVCC_EXECUTABLE : ${CUDA_NVCC_EXECUTABLE}")
-message("CUDA_SDK_ROOT_DIR : ${CUDA_SDK_ROOT_DIR}")
-message("CUDA_SDK_SEARCH_PATH : ${CUDA_SDK_SEARCH_PATH}")
+message("set(CUDA_TOOLKIT_ROOT_DIR \"${CUDA_TOOLKIT_ROOT_DIR}\")")
+message("set(CUDA_INCLUDE_DIRS \"${CUDA_INCLUDE_DIRS}\")")
+message("set(CUDA_TOOLKIT_INCLUDE \"${CUDA_TOOLKIT_INCLUDE}\")")
+message("set(CUDA_CUDART_LIBRARY \"${CUDA_CUDART_LIBRARY}\")")
+message("set(CUDA_cublas_LIBRARY \"${CUDA_cublas_LIBRARY}\")")
+message("set(CUDA_LIBRARIES \"${CUDA_LIBRARIES}\")")
+message("set(CUDA_cudart_static_LIBRARY \"${CUDA_cudart_static_LIBRARY}\")")
+message("set(CUDA_cudadevrt_LIBRARY \"${CUDA_cudadevrt_LIBRARY}\")")
+message("set(CUDA_NVCC_EXECUTABLE \"${CUDA_NVCC_EXECUTABLE}\")")
+message("set(CUDA_SDK_ROOT_DIR \"${CUDA_SDK_ROOT_DIR}\")")
+message("set(CUDA_SDK_SEARCH_PATH \"${CUDA_SDK_SEARCH_PATH}\")")
+message("set(CUDA_cufft_LIBRARY \"${CUDA_cufft_LIBRARY}\")")
+message("set(CUDA_nppc_LIBRARY \"${CUDA_nppc_LIBRARY}\")")
+message("set(CUDA_nppial_LIBRARY \"${CUDA_nppial_LIBRARY}\")")
+message("set(CUDA_nppicc_LIBRARY \"${CUDA_nppicc_LIBRARY}\")")
+message("set(CUDA_nppicom_LIBRARY \"${CUDA_nppicom_LIBRARY}\")")
+message("set(CUDA_nppidei_LIBRARY \"${CUDA_nppidei_LIBRARY}\")")
+message("set(CUDA_nppif_LIBRARY \"${CUDA_nppif_LIBRARY}\")")
+message("set(CUDA_nppig_LIBRARY \"${CUDA_nppig_LIBRARY}\")")
+message("set(CUDA_nppim_LIBRARY \"${CUDA_nppim_LIBRARY}\")")
+message("set(CUDA_nppist_LIBRARY \"${CUDA_nppist_LIBRARY}\")")
+message("set(CUDA_nppisu_LIBRARY \"${CUDA_nppisu_LIBRARY}\")")
+message("set(CUDA_nppitc_LIBRARY \"${CUDA_nppitc_LIBRARY}\")")
+message("set(CUDA_npps_LIBRARY \"${CUDA_npps_LIBRARY}\")")
+
+message("set(CMAKE_C_COMPILER \"${CMAKE_C_COMPILER}\")")
+message("set(CMAKE_CXX_COMPILER \"${CMAKE_CXX_COMPILER}\")")
+message("set(CMAKE_CUDA_COMPILER \"${CMAKE_CUDA_COMPILER}\")")
 
 add_executable(vec1d vec1d.c)
 target_link_libraries(vec1d PRIVATE ${CUDA_LIBRARIES} my_cuda m)
